Feat: add answer & question

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Page Title</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+   <link rel="stylesheet" href="style.css">
+	<script src="myScript.js"></script>
+	
+</head>
+<body>
 
+
+<h1 id="question"> question </h1>
+<h1 id="answer"> answer </h1>
+
+	
+</body>
+</html>
