Feat: add button

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-
+<p> 1</p>
 <h1 id="question"> question </h1>
-<h1 id="answer"> answer </h1>
+<button id="btn1">Reveal</button>
 
 	
 </body>
