Feat: make cards reveal answers

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Page Title</title>
+  <title>Quiz</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <link rel="stylesheet" href="style.css">
 	<script src="myScript.js"></script>
@@ -9,9 +9,10 @@
 </head>
 <body>
 
-<p> 1</p>
-<h1 id="question"> question </h1>
-<button id="btn1">Reveal</button>
+<h1 id="title">USA Flash Cards</h1>
+<h1 id="test">Q.1: What is the supreme law of the land?</h1>
+<br>
+<input id="click" type="button" value="Reveal" />
 
 	
 </body>
